Fixes icon alignment in breadcrumb

--- a/source/sass/component/navigation/_breadcrumb.scss
+++ b/source/sass/component/navigation/_breadcrumb.scss
@@ -18,7 +18,7 @@
     font-size: .9rem;
 
     i {
-        text-align: text-top;
+        vertical-align: text-top;
     }
 
     li {
